2011-09-18  Eric Botcazou  <ebotcazou@adacore.com>
	    Iain Sandoe  <developer@sandoe-acoustics.co.uk>

	PR target/50091
	* config/rs6000/rs6000.md (probe_stack): Use explicit operand.
	* config/rs6000/rs6000.c (output_probe_stack_range): Likewise.

2011-09-14   Diego Novillo  <dnovillo@google.com>

	* tree-vect-stmts.c (vect_transform_stmt): Remove unused
	local variable ORIG_SCALAR_STMT.

2011-09-08  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2011-09-07  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/49911
	* tree-sra.c (analyze_access_subtree): Change type of to-be-replaced
	enumerations to the corresponding plain integer type.

2011-09-08  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-07-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49518
	PR tree-optimization/49628
	* tree-vect-data-refs.c (vect_enhance_data_refs_alignment): Skip
	irrelevant data-references.

2011-09-08  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-08-23  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50162
	* tree-vect-stmts.c (vectorizable_call): Fix argument lookup.

2011-09-08  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-05-05  Michael Matz  <matz@suse.de>

	* config/alpha/elf.h (ENDFILE_SPEC): Add Ofast.
	* config/alpha/osf5.h (ENDFILE_SPEC): Add Ofast.
	* config/alpha/netbsd.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/linux.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/sp64-elf.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/sp-elf.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/linux64.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/freebsd.h (ENDFILE_SPEC): Add Ofast.
	* config/sparc/sol2.h (ENDFILE_SPEC): Add Ofast.
	* config/i386/cygwin.h (ENDFILE_SPEC): Add Ofast.
	* config/i386/linux.h (ENDFILE_SPEC): Add Ofast.
	* config/i386/linux64.h (ENDFILE_SPEC): Add Ofast.
	* config/i386/darwin.h (ENDFILE_SPEC): Add Ofast.