@@ -1,3 +1,9 @@
+2011-09-19  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/49886
+	* gcc.dg/torture/pr49886.c: Remove XFAILs.
+	* gcc.dg/torture/pr50287.c: New test.
+
 2011-09-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/50442
